One To Many, parent child

--- a/smartedu_con/templates/course.html
+++ b/smartedu_con/templates/course.html
@@ -2,7 +2,7 @@
 
 <div class="all-title-box">
   <div class="container text-center">
-    <h1>Courses</h1>
+    <h1>{{course.name}}</h1>
   </div>
 </div>
 
@@ -10,57 +10,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-9 blog-post-single">
-        <div class="row">
-          {% for course in courses %}
-          <div class="col-lg-6 col-md-6 col-12 mb-4">
-            <div class="course-item">
-              <div class="image-blog">
-                <img src="{{course.image.url}}" alt="" class="img-fluid" />
-              </div>
-              <div class="course-br">
-                <div class="course-title">
-                  <h2>
-                    <a
-                      href="{% url 'course_detail' course.category.slug  course.id %}"
-                      title=""
-                      >{{course.name}}</a
-                    >
-                  </h2>
-                </div>
-                <div class="course-desc">
-                  <p>{{course.description | truncatechars:100}}</p>
-                </div>
-                <div class="course-rating">
-                  4.5
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i>
-                  <i class="fa fa-star-half"></i>
-                </div>
-              </div>
-              <div class="course-meta-bot">
-                <ul>
-                  <li>
-                    <i class="fa fa-calendar" aria-hidden="true"></i> 6 Month
-                  </li>
-                  <li>
-                    <i class="fa fa-users" aria-hidden="true"></i> 56 Student
-                  </li>
-                  <li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- end col -->
-
-          {% endfor %}
-        </div>
-        <!-- end row -->
-
         <div class="blog-item">
           <div class="image-blog">
-            <img src="images/blog_single.jpg" alt="" class="img-fluid" />
+            <img src="{{course.image.url}}" alt="" class="img-fluid" />
           </div>
           <div class="post-content">
             <div class="post-date">
@@ -79,7 +31,7 @@
             </div>
             <div class="blog-title">
               <h2>
-                <a href="#" title="">perferendis doloribus asperiores.</a>
+                <a href="#" title="">{{course.name}}</a>
               </h2>
             </div>
             <div class="blog-desc">
@@ -88,14 +40,7 @@
                 maiorum intel ogrets geuiat operts elicata libere avisse id
                 cumlegebat, liber regione eu sit....
               </p>
-              <blockquote class="default">
-                Nulla nunc dui, tristique in semper vel, congue sed ligula. Nam
-                dolor ligula, faucibus id sodales in, auctor fringilla libero.
-                Pellentesque pellentesque eget tempor tellus. Fusce lacinia
-                tempor malesuada. Ut lacus sapien, placerat a ornare nec,
-                elementum sit amet felis. Maecenas pretium lorem hendrerit eros
-                sagittis fermentum.
-              </blockquote>
+              <blockquote class="default">{{course.description}}</blockquote>
               <p>
                 Phasellus tristique commodo libero, eget dignissim turpis
                 dignissim quis. Morbi sit amet laoreet nibh, gravida scelerisque
