--- a/smartedu_con/templates/partials/_navbar.html
+++ b/smartedu_con/templates/partials/_navbar.html
@@ -68,9 +68,13 @@
               <a class="dropdown-item" href="blog-single.html">Blog single </a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="teachers.html">Teachers</a>
+
+          <li
+            class="nav-item {% if 'teachers' in request.path %}active{% endif %}"
+          >
+            <a class="nav-link" href="{% url 'teachers' %}">Teachers</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="pricing.html">Pricing</a>
           </li>
