--- a/smartedu_con/templates/index.html
+++ b/smartedu_con/templates/index.html
@@ -241,7 +241,7 @@
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-online"></i></span>
 					<p class="stat_count">{{total_course}}</p>
-					<h3>Courses</h3>
+					<h3>Kurs</h3>
 				</div><!-- end col -->
 
 				<div class="col-md-4 col-sm-4 col-xs-12">
