--- a/smartedu_con/templates/teachers.html
+++ b/smartedu_con/templates/teachers.html
@@ -2,11 +2,7 @@
 
 <div class="all-title-box">
   <div class="container text-center">
-    <h1>
-      Teachers<span class="m_1"
-        >Lorem Ipsum dolroin gravida nibh vel velit.</span
-      >
-    </h1>
+    <h1>{{object.name}}</h1>
   </div>
 </div>
 
@@ -34,7 +30,11 @@
             </div>
           </div>
           <div class="team-content">
-            <h3 class="title">{{teacher.name}}</h3>
+            <h3 class="title">
+              <a href="{%url  'teacher_detail' teacher.pk %}"
+                >{{teacher.name}}</a
+              >
+            </h3>
             <span class="post">{{teacher.title}}</span>
           </div>
         </div>
